--- a/covid.ipynb
+++ b/covid.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "covid.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOu3ENU7bE5G0KundoInArg",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/alexsandro-matias/covid-atualizado/blob/main/covid.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -41,118 +24,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/wcota/covid19br/master/cases-brazil-states.csv\")"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "IzN9Ks9q-Mhk"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/wcota/covid19br/master/cases-brazil-states.csv\")"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "state = 'PE'\n",
-        "\n",
-        "df = df[df[\"state\"] == state]\n",
-        "\n",
-        "df"
-      ],
+      "execution_count": 10,
       "metadata": {
-        "id": "QtYrvPFt_OcO",
-        "outputId": "ade1de28-26d2-47a1-c62a-05d7557fc4f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 661
-        }
+        },
+        "id": "QtYrvPFt_OcO",
+        "outputId": "ade1de28-26d2-47a1-c62a-05d7557fc4f7"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "       epi_week        date country state   city  newDeaths  deaths  newCases  \\\n",
-              "72           11  2020-03-12  Brazil    PE  TOTAL          0       0         2   \n",
-              "87           11  2020-03-13  Brazil    PE  TOTAL          0       0         0   \n",
-              "103          11  2020-03-14  Brazil    PE  TOTAL          0       0         5   \n",
-              "120          12  2020-03-15  Brazil    PE  TOTAL          0       0         1   \n",
-              "138          12  2020-03-16  Brazil    PE  TOTAL          0       0         0   \n",
-              "...         ...         ...     ...   ...    ...        ...     ...       ...   \n",
-              "24473       231  2022-08-03  Brazil    PE  TOTAL          4   22057      1071   \n",
-              "24501       231  2022-08-04  Brazil    PE  TOTAL          6   22063      1233   \n",
-              "24529       231  2022-08-05  Brazil    PE  TOTAL          7   22070      1200   \n",
-              "24557       231  2022-08-06  Brazil    PE  TOTAL          5   22075       911   \n",
-              "24585       232  2022-08-07  Brazil    PE  TOTAL          4   22079       271   \n",
-              "\n",
-              "       totalCases  deathsMS  ...      tests  tests_per_100k_inhabitants  \\\n",
-              "72              2         0  ...        NaN                         NaN   \n",
-              "87              2         0  ...        NaN                         NaN   \n",
-              "103             7         0  ...        NaN                         NaN   \n",
-              "120             8         0  ...        NaN                         NaN   \n",
-              "138             8         0  ...        NaN                         NaN   \n",
-              "...           ...       ...  ...        ...                         ...   \n",
-              "24473     1031355     22057  ...  3390139.0                 35472.57313   \n",
-              "24501     1032588     22063  ...  3390139.0                 35472.57313   \n",
-              "24529     1033788     22070  ...  3390139.0                 35472.57313   \n",
-              "24557     1034699     22075  ...  3390139.0                 35472.57313   \n",
-              "24585     1034970     22079  ...  3390139.0                 35472.57313   \n",
-              "\n",
-              "       vaccinated  vaccinated_per_100_inhabitants  vaccinated_second  \\\n",
-              "72            NaN                             NaN                NaN   \n",
-              "87            NaN                             NaN                NaN   \n",
-              "103           NaN                             NaN                NaN   \n",
-              "120           NaN                             NaN                NaN   \n",
-              "138           NaN                             NaN                NaN   \n",
-              "...           ...                             ...                ...   \n",
-              "24473   8388502.0                        87.77273          7457791.0   \n",
-              "24501   8388502.0                        87.77273          7457791.0   \n",
-              "24529   8402032.0                        87.91430          7475050.0   \n",
-              "24557   8402735.0                        87.92166          7475765.0   \n",
-              "24585   8403303.0                        87.92760          7475982.0   \n",
-              "\n",
-              "       vaccinated_second_per_100_inhabitants  vaccinated_single  \\\n",
-              "72                                       NaN                NaN   \n",
-              "87                                       NaN                NaN   \n",
-              "103                                      NaN                NaN   \n",
-              "120                                      NaN                NaN   \n",
-              "138                                      NaN                NaN   \n",
-              "...                                      ...                ...   \n",
-              "24473                               78.03427           192926.0   \n",
-              "24501                               78.03427           192926.0   \n",
-              "24529                               78.21486           192926.0   \n",
-              "24557                               78.22234           192926.0   \n",
-              "24585                               78.22462           192926.0   \n",
-              "\n",
-              "       vaccinated_single_per_100_inhabitants  vaccinated_third  \\\n",
-              "72                                       NaN               NaN   \n",
-              "87                                       NaN               NaN   \n",
-              "103                                      NaN               NaN   \n",
-              "120                                      NaN               NaN   \n",
-              "138                                      NaN               NaN   \n",
-              "...                                      ...               ...   \n",
-              "24473                                2.01867         4870219.0   \n",
-              "24501                                2.01867         4870219.0   \n",
-              "24529                                2.01867         5179924.0   \n",
-              "24557                                2.01867         5179924.0   \n",
-              "24585                                2.01867         5179924.0   \n",
-              "\n",
-              "       vaccinated_third_per_100_inhabitants  \n",
-              "72                                      NaN  \n",
-              "87                                      NaN  \n",
-              "103                                     NaN  \n",
-              "120                                     NaN  \n",
-              "138                                     NaN  \n",
-              "...                                     ...  \n",
-              "24473                              50.95933  \n",
-              "24501                              50.95933  \n",
-              "24529                              54.19991  \n",
-              "24557                              54.19991  \n",
-              "24585                              54.19991  \n",
-              "\n",
-              "[879 rows x 26 columns]"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-ab06738e-c156-40d5-acdc-431af5041ccd\">\n",
@@ -543,21 +437,132 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "       epi_week        date country state   city  newDeaths  deaths  newCases  \\\n",
+              "72           11  2020-03-12  Brazil    PE  TOTAL          0       0         2   \n",
+              "87           11  2020-03-13  Brazil    PE  TOTAL          0       0         0   \n",
+              "103          11  2020-03-14  Brazil    PE  TOTAL          0       0         5   \n",
+              "120          12  2020-03-15  Brazil    PE  TOTAL          0       0         1   \n",
+              "138          12  2020-03-16  Brazil    PE  TOTAL          0       0         0   \n",
+              "...         ...         ...     ...   ...    ...        ...     ...       ...   \n",
+              "24473       231  2022-08-03  Brazil    PE  TOTAL          4   22057      1071   \n",
+              "24501       231  2022-08-04  Brazil    PE  TOTAL          6   22063      1233   \n",
+              "24529       231  2022-08-05  Brazil    PE  TOTAL          7   22070      1200   \n",
+              "24557       231  2022-08-06  Brazil    PE  TOTAL          5   22075       911   \n",
+              "24585       232  2022-08-07  Brazil    PE  TOTAL          4   22079       271   \n",
+              "\n",
+              "       totalCases  deathsMS  ...      tests  tests_per_100k_inhabitants  \\\n",
+              "72              2         0  ...        NaN                         NaN   \n",
+              "87              2         0  ...        NaN                         NaN   \n",
+              "103             7         0  ...        NaN                         NaN   \n",
+              "120             8         0  ...        NaN                         NaN   \n",
+              "138             8         0  ...        NaN                         NaN   \n",
+              "...           ...       ...  ...        ...                         ...   \n",
+              "24473     1031355     22057  ...  3390139.0                 35472.57313   \n",
+              "24501     1032588     22063  ...  3390139.0                 35472.57313   \n",
+              "24529     1033788     22070  ...  3390139.0                 35472.57313   \n",
+              "24557     1034699     22075  ...  3390139.0                 35472.57313   \n",
+              "24585     1034970     22079  ...  3390139.0                 35472.57313   \n",
+              "\n",
+              "       vaccinated  vaccinated_per_100_inhabitants  vaccinated_second  \\\n",
+              "72            NaN                             NaN                NaN   \n",
+              "87            NaN                             NaN                NaN   \n",
+              "103           NaN                             NaN                NaN   \n",
+              "120           NaN                             NaN                NaN   \n",
+              "138           NaN                             NaN                NaN   \n",
+              "...           ...                             ...                ...   \n",
+              "24473   8388502.0                        87.77273          7457791.0   \n",
+              "24501   8388502.0                        87.77273          7457791.0   \n",
+              "24529   8402032.0                        87.91430          7475050.0   \n",
+              "24557   8402735.0                        87.92166          7475765.0   \n",
+              "24585   8403303.0                        87.92760          7475982.0   \n",
+              "\n",
+              "       vaccinated_second_per_100_inhabitants  vaccinated_single  \\\n",
+              "72                                       NaN                NaN   \n",
+              "87                                       NaN                NaN   \n",
+              "103                                      NaN                NaN   \n",
+              "120                                      NaN                NaN   \n",
+              "138                                      NaN                NaN   \n",
+              "...                                      ...                ...   \n",
+              "24473                               78.03427           192926.0   \n",
+              "24501                               78.03427           192926.0   \n",
+              "24529                               78.21486           192926.0   \n",
+              "24557                               78.22234           192926.0   \n",
+              "24585                               78.22462           192926.0   \n",
+              "\n",
+              "       vaccinated_single_per_100_inhabitants  vaccinated_third  \\\n",
+              "72                                       NaN               NaN   \n",
+              "87                                       NaN               NaN   \n",
+              "103                                      NaN               NaN   \n",
+              "120                                      NaN               NaN   \n",
+              "138                                      NaN               NaN   \n",
+              "...                                      ...               ...   \n",
+              "24473                                2.01867         4870219.0   \n",
+              "24501                                2.01867         4870219.0   \n",
+              "24529                                2.01867         5179924.0   \n",
+              "24557                                2.01867         5179924.0   \n",
+              "24585                                2.01867         5179924.0   \n",
+              "\n",
+              "       vaccinated_third_per_100_inhabitants  \n",
+              "72                                      NaN  \n",
+              "87                                      NaN  \n",
+              "103                                     NaN  \n",
+              "120                                     NaN  \n",
+              "138                                     NaN  \n",
+              "...                                     ...  \n",
+              "24473                              50.95933  \n",
+              "24501                              50.95933  \n",
+              "24529                              54.19991  \n",
+              "24557                              54.19991  \n",
+              "24585                              54.19991  \n",
+              "\n",
+              "[879 rows x 26 columns]"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "state = 'PE'\n",
+        "\n",
+        "df = df[df[\"state\"] == state]\n",
+        "\n",
+        "df"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        ""
-      ],
       "metadata": {
         "id": "lAqWxWgK_Nti"
+      },
+      "source": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOu3ENU7bE5G0KundoInArg",
+      "include_colab_link": true,
+      "name": "covid.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.5 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
